--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
           <a href="https://www.linkedin.com/in/priya-hariharan-2834271b7/" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-linkedin mr-2"></i>
           </a>
-          <a href="https://github.com/phariharan818?tab=overview&from=2023-07-01&to=2023-07-31/" target="_blank"
+          <a href="https://github.com/phariharan818" target="_blank"
             rel="noopener noreferrer">
             <i class="fab fa-github mr-2"></i>
           </a>
