--- a/templates/work.html
+++ b/templates/work.html
@@ -10,7 +10,7 @@
             <strong>Production Engineering Fellow</strong>
             <ul>June 2023 - Present</ul>
           </div>
-          <p>Major League Hacking</p>
+          <p class="smaller-screen">Major League Hacking</p>
         </button>
       </h5>
     </div>
@@ -61,7 +61,7 @@
         <button class="btn collapsed btn-work" data-bs-toggle="collapse" data-bs-target="#collapseThree"
           aria-expanded="false" aria-controls="collapseThree">
           <div class="sub-info">
-            <strong>Research Assistant</strong>
+            <strong class="smaller-screen">Research Assistant</strong>
             <ul>Sept. 2021 - June 2022</ul>
           </div>
           <p>Social Policy and Identity Research (SPIR) Lab</p>
