--- a/templates/index.html
+++ b/templates/index.html
@@ -36,151 +36,211 @@
   <hr class="custom-hr">
   <h1 class="map-title">So far, I have visited: </h1>
   <div class="card-container">
-      <div class="mt-4" id="map"></div>
+    <div class="mt-4" id="map"></div>
   </div>
 </div>
 <div id="contact">
   <h1 class="about-title"><strong>Contact Me</strong></h1>
   <hr class="custom-hr">
-  <p class="timeline-p text-center text-wrap">Feel free to ask post your questions here!</p>
-<div class="row mt-5 ml-3 mr-3">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title text-center">Create Post</h5>
-                <p class="card-text">
-                    <form id="timeline-form" method="post" action="/timeline">
-                      <div class="timeline-form-inputs">
-                        <input class="card-text mt-4" type="text" name="name" placeholder="Name" style="border: 2px solid black"; required>
-                        <input class="card-text mt-4" type="email" name="email" placeholder="Email" style="border: 2px solid black"; required>
-                        <textarea class="card-text mt-4" name="content" placeholder="Content" style="border: 2px solid black"; required></textarea>
-                        <button type="submit">Create Post</button>
-                      </div>
-                    </form>
-                </p>
+  <div class="row mt-5 ml-3 mr-3"></div>
+  <p class="timeline-p text-center">Feel free to send me an email with your questions using the form down below!</p>
+  <div class="row">
+    <div class="col-sm-6 offset-sm-3">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title text-center" style="margin-bottom: 1.5em;"><strong>Please enter the following: </strong>
+          </h3>
+          <p class="card-text">
+          <form id="contact-form" method="post" action="/contact">
+            <div class="form-group mt-3">
+              <input class="form-control custom-input" type="text" name="name" placeholder="Name" required>
             </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        {% for post in posts %}
-        <div class="card mb-3">
-            <div class="card-body">
-                <h5 class="card-title">{{post.name}}</h5>
-                <p class="card-text">{{post.content}}</p>
-                <form action="/delete_post" method="post" class="d-inline">
-                    <input type="hidden" name="post_id" value="{{post.id}}">
-                    <button type="submit" class="btn btn-primary active">Delete</button>
-                </form>
+            <div class="form-group mt-3 mb-2">
+              <input class="form-control custom-input" type="email" name="recipient_email" placeholder="Email" required>
             </div>
+            <div class="form-group mt-3">
+              <textarea class="form-control custom-input" name="message" placeholder="Message" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-dark mt-1">Send Message</button>
+          </form>
+          </p>
         </div>
-        {% endfor %}
+      </div>
+      <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header custom-modal-header">
+              <h5 class="modal-title" id="successModalLabel">Success!</h5>
+              <button type="button" class="btn-close" aria-label="Close">
+                <span>&times;</span>
+              </button>
+            </div>
+            <div class="modal-body custom-modal-body">
+              Thank you for filling out the form!
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-<script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"></script>
 
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const contactForm = document.getElementById("contact-form");
+        const successModal = new bootstrap.Modal(document.getElementById("successModal"));
 
-  var map = L.map("map").setView([37.8, -96], 4);
+        contactForm.addEventListener("submit", function (event) {
+          event.preventDefault();
 
-    var tiles = L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
-      maxZoom: 19,
-      attribution:
-        '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-    }).addTo(map);
+          // Get form data
+          const formData = new FormData(contactForm);
 
-    L.geoJson(statesData).addTo(map);
+          // Perform AJAX POST request
+          fetch("/contact", {
+            method: "POST",
+            body: formData,
+          })
+            .then((response) => response.text())
+            .then((data) => {
+              // Show success modal
+              successModal.show();
 
-    function getColor(v) {
-      switch (v) {
-        case 1: // priya
-          return "#a2c999";
+              // Get the modal element
+              const modal = document.getElementById("successModal");
+
+              // Get the close button element
+              const closeButton = modal.querySelector(".btn-close");
+
+              // When the user clicks on the close button (X), close the modal
+              closeButton.addEventListener("click", function () {
+                successModal.hide();
+              });
+
+              // When the user clicks anywhere outside of the modal, close it
+              window.addEventListener("click", function (event) {
+                if (event.target === modal) {
+                  successModal.hide();
+                }
+              });
+
+              // Clear form
+              contactForm.reset();
+
+              // Hide success modal after a delay
+              setTimeout(function () {
+                successModal.hide();
+              }, 3000);
+            })
+            .catch((error) => {
+              console.error("Error sending message:", error);
+            });
+        });
+      });
+    </script>
+
+    <script>
+      var map = L.map("map").setView([37.8, -96], 4);
+
+      var tiles = L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
+        maxZoom: 19,
+        attribution:
+          '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+      }).addTo(map);
+
+      L.geoJson(statesData).addTo(map);
+
+      function getColor(v) {
+        switch (v) {
+          case 1: // priya
+            return "#a2c999";
+        }
       }
-    }
-    function getLabel(v) {
-      switch (v) {
-        case 1: // priya
-          return "Visited States";
+      function getLabel(v) {
+        switch (v) {
+          case 1: // priya
+            return "Visited States";
+        }
       }
-    }
 
-    function style(feature) {
-      return {
-        fillColor: getColor(feature.properties.visited),
-        weight: 1,
-        opacity: 0,
-        color: "white",
-        dashArray: "0",
-        fillOpacity: 0.75,
+      function style(feature) {
+        return {
+          fillColor: getColor(feature.properties.visited),
+          weight: 1,
+          opacity: 0,
+          color: "white",
+          dashArray: "0",
+          fillOpacity: 0.75,
+        };
+      }
+
+      function highlightFeature(e) {
+        var layer = e.target;
+
+        layer.setStyle({
+          weight: 5,
+          color: "#fff",
+          dashArray: "",
+          fillOpacity: 1,
+        });
+
+        layer.bringToFront();
+      }
+
+      function resetHighlight(e) {
+        geojson.resetStyle(e.target);
+      }
+
+      function zoomToFeature(e) {
+        map.fitBounds(e.target.getBounds());
+      }
+
+      function onEachFeature(feature, layer) {
+        layer.on({
+          mouseover: highlightFeature,
+          mouseout: resetHighlight,
+          click: zoomToFeature,
+        });
+      }
+
+      geojson = L.geoJson(statesData, {
+        style: style,
+        onEachFeature: onEachFeature,
+      }).addTo(map);
+
+      var info = L.control();
+
+      info.onAdd = function (map) {
+        this._div = L.DomUtil.create("div", "info");
+        this.update();
+        return this._div;
       };
-    }
 
-    function highlightFeature(e) {
-      var layer = e.target;
+      info.update = function (props) {
+        this._div.innerHTML = "<h4>Map of the United States</h4>";
+      };
 
-      layer.setStyle({
-        weight: 5,
-        color: "#fff",
-        dashArray: "",
-        fillOpacity: 1,
-      });
+      info.addTo(map);
 
-      layer.bringToFront();
-    }
+      var legend = L.control({ position: "bottomright" });
 
-    function resetHighlight(e) {
-      geojson.resetStyle(e.target);
-    }
+      legend.onAdd = function (map) {
+        var div = L.DomUtil.create("div", "info legend"),
+          grades = [1];
+        for (var i = 0; i < grades.length; i++) {
+          div.innerHTML +=
+            '<i style="background:' +
+            getColor(grades[i]) +
+            '"></i> ' +
+            getLabel(grades[i]) +
+            "<br>";
+        }
+        return div;
+      };
 
-    function zoomToFeature(e) {
-      map.fitBounds(e.target.getBounds());
-    }
-
-    function onEachFeature(feature, layer) {
-      layer.on({
-        mouseover: highlightFeature,
-        mouseout: resetHighlight,
-        click: zoomToFeature,
-      });
-    }
-
-    geojson = L.geoJson(statesData, {
-      style: style,
-      onEachFeature: onEachFeature,
-    }).addTo(map);
-
-    var info = L.control();
-
-    info.onAdd = function (map) {
-      this._div = L.DomUtil.create("div", "info");
-      this.update();
-      return this._div;
-    };
-
-    info.update = function (props) {
-      this._div.innerHTML = "<h4>Map of the United States</h4>";
-    };
-
-    info.addTo(map);
-
-    var legend = L.control({ position: "bottomright" });
-
-    legend.onAdd = function (map) {
-      var div = L.DomUtil.create("div", "info legend"),
-        grades = [1];
-      for (var i = 0; i < grades.length; i++) {
-        div.innerHTML +=
-          '<i style="background:' +
-          getColor(grades[i]) +
-          '"></i> ' +
-          getLabel(grades[i]) +
-          "<br>";
-      }
-      return div;
-    };
-
-    legend.addTo(map);
-</script>
+      legend.addTo(map);
+    </script>
 
 {% endblock %}
