--- a/templates/index.html
+++ b/templates/index.html
@@ -1,246 +1,50 @@
 {% extends "template.html" %} {% block content %}
+<div class="card-deck mt-2 mr-2 ml-2">
+  <div class="card about-container mx-auto">
+    <div class="about-me d-flex">
+      <div>
+        <h1 class="about-title">About Me</h1>
+        <p class="about-text mt-4">
+          Hi! My name is Priya Hariharan and I am majoring in Informatics at the University of Washington, Seattle with a focus area in Software Engineering and Development.
+          I am passionate about creating innovative and user-friendly software solutions that people can depend on. Through my coursework and projects, I have gained experience in various programming languages and I enjoy collaborating with others.
 
-
-<div>
-  <h1 class="hello-text">Hey, I'm Priya Hariharan!</h1>
-  <p class="hello-description">An aspiring <span style="font-weight: bold;">full-stack</span> developer with a passion
-    for creating projects that people depend on.</p>
-</div>
-<div class="arrow-container" style="margin-bottom: -1em;">
-  <a href="#about" class="arrow-link" style="text-decoration: none; font-weight: normal;">
-    <span class="arrow-down mb-4">&#x2193;</span>
-  </a>
-</div>
-<div id="about" class="mt-4 mr-2 ml-2 about-section">
-  <h1 class="about-title"><strong>About Me</strong></h1>
-  <hr class="custom-hr">
-  {% include "about.html" %}
-</div>
-<div id="projects">
-  <h1 class="about-title"><strong>Projects</strong></h1>
-  <hr class="custom-hr">
-  {% include "project.html" %}
-</div>
-<div id="work">
-  <h1 class="about-title"><strong>Work Experience</strong></h1>
-  <hr class="custom-hr">
-  {% include "work.html" %}
-</div>
-<div id="hobby">
-  <h1 class="about-title"><strong>Hobbies</strong></h1>
-  <hr class="custom-hr">
-  {% include "hobbies.html" %}
-</div>
-<div id="map-stuff">
-  <h1 class="about-title"><strong>Map</strong></h1>
-  <hr class="custom-hr">
-  <h1 class="map-title">So far, I have visited: </h1>
-  <div class="card-container">
-    <div class="mt-4" id="map"></div>
-  </div>
-</div>
-<div id="contact">
-  <h1 class="about-title"><strong>Contact Me</strong></h1>
-  <hr class="custom-hr">
-  <div class="row mt-5 ml-3 mr-3"></div>
-  <p class="timeline-p text-center">Feel free to send me an email with your questions using the form down below!</p>
-  <div class="row">
-    <div class="col-sm-6 offset-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title text-center" style="margin-bottom: 1.5em;"><strong>Please enter the following: </strong>
-          </h3>
-          <p class="card-text">
-          <form id="contact-form" method="post" action="/contact">
-            <div class="form-group mt-3">
-              <input class="form-control custom-input" type="text" name="name" placeholder="Name" required>
-            </div>
-            <div class="form-group mt-3 mb-2">
-              <input class="form-control custom-input" type="email" name="recipient_email" placeholder="Email" required>
-            </div>
-            <div class="form-group mt-3">
-              <textarea class="form-control custom-input" name="message" placeholder="Message" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-dark mt-1">Send Message</button>
-          </form>
-          </p>
+        </p>
+        <div class="social-icons">
+          <a href="https://www.linkedin.com/in/priya-hariharan-2834271b7/" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-linkedin mr-2"></i>
+          </a>
+          <a href="https://github.com/phariharan818?tab=overview&from=2023-07-01&to=2023-07-31/" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-github mr-2"></i>
+          </a>
+          <a href="https://drive.google.com/file/d/1_Iqg5rL5iGclxlzvS-MrRnfGXOStK_qt/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+            <i class="fas fa-file-alt fa-3x mr-2"></i>
+          </a>
         </div>
       </div>
-      <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header custom-modal-header">
-              <h5 class="modal-title" id="successModalLabel">Success!</h5>
-              <button type="button" class="btn-close" aria-label="Close">
-                <span>&times;</span>
-              </button>
-            </div>
-            <div class="modal-body custom-modal-body">
-              Thank you for filling out the form!
-            </div>
-          </div>
+      <img class="priya-pic" src="{{ url_for('static', filename='img/priya.jpg') }}" />
+    </div>
+  </div>
+</div>
+<div class="card-deck mr-2 ml-2">
+  <div class="card about-container mx-auto">
+    <div class="about-me d-flex">
+      <div>
+        <h1 class="about-title">Programming Languages</h1>
+        <div class="programming-languages">
+          <i class="fab fa-java m-3" title="Java"></i>
+          <i class="fab fa-python m-3" title="Python"></i>
+          <i class="fab fa-html5 m-3" title="HTML"></i>
+          <i class="fab fa-css3-alt m-3" title="CSS"></i>
+          <i class="fab fa-react m-3" title="ReactJS"></i>
+          <i class="fab fa-js m-3" title="JavaScript"></i>
+          <i class="fab fa-r-project m-3" title="R"></i>
+          <i class="fas fa-database m-3" title="SQL"></i>
+          <i class="fab fa-git m-3" title="Git"></i>
+          <i class="fab fa-ajax m-3" title="Ajax"></i>
         </div>
       </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"></script>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const contactForm = document.getElementById("contact-form");
-        const successModal = new bootstrap.Modal(document.getElementById("successModal"));
-
-        contactForm.addEventListener("submit", function (event) {
-          event.preventDefault();
-
-          // Get form data
-          const formData = new FormData(contactForm);
-
-          // Perform AJAX POST request
-          fetch("/contact", {
-            method: "POST",
-            body: formData,
-          })
-            .then((response) => response.text())
-            .then((data) => {
-              // Show success modal
-              successModal.show();
-
-              // Get the modal element
-              const modal = document.getElementById("successModal");
-
-              // Get the close button element
-              const closeButton = modal.querySelector(".btn-close");
-
-              // When the user clicks on the close button (X), close the modal
-              closeButton.addEventListener("click", function () {
-                successModal.hide();
-              });
-
-              // When the user clicks anywhere outside of the modal, close it
-              window.addEventListener("click", function (event) {
-                if (event.target === modal) {
-                  successModal.hide();
-                }
-              });
-
-              // Clear form
-              contactForm.reset();
-
-              // Hide success modal after a delay
-              setTimeout(function () {
-                successModal.hide();
-              }, 3000);
-            })
-            .catch((error) => {
-              console.error("Error sending message:", error);
-            });
-        });
-      });
-    </script>
-
-    <script>
-      var map = L.map("map").setView([37.8, -96], 4);
-
-      var tiles = L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
-        maxZoom: 19,
-        attribution:
-          '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-      }).addTo(map);
-
-      L.geoJson(statesData).addTo(map);
-
-      function getColor(v) {
-        switch (v) {
-          case 1: // priya
-            return "#a2c999";
-        }
-      }
-      function getLabel(v) {
-        switch (v) {
-          case 1: // priya
-            return "Visited States";
-        }
-      }
-
-      function style(feature) {
-        return {
-          fillColor: getColor(feature.properties.visited),
-          weight: 1,
-          opacity: 0,
-          color: "white",
-          dashArray: "0",
-          fillOpacity: 0.75,
-        };
-      }
-
-      function highlightFeature(e) {
-        var layer = e.target;
-
-        layer.setStyle({
-          weight: 5,
-          color: "#fff",
-          dashArray: "",
-          fillOpacity: 1,
-        });
-
-        layer.bringToFront();
-      }
-
-      function resetHighlight(e) {
-        geojson.resetStyle(e.target);
-      }
-
-      function zoomToFeature(e) {
-        map.fitBounds(e.target.getBounds());
-      }
-
-      function onEachFeature(feature, layer) {
-        layer.on({
-          mouseover: highlightFeature,
-          mouseout: resetHighlight,
-          click: zoomToFeature,
-        });
-      }
-
-      geojson = L.geoJson(statesData, {
-        style: style,
-        onEachFeature: onEachFeature,
-      }).addTo(map);
-
-      var info = L.control();
-
-      info.onAdd = function (map) {
-        this._div = L.DomUtil.create("div", "info");
-        this.update();
-        return this._div;
-      };
-
-      info.update = function (props) {
-        this._div.innerHTML = "<h4>Map of the United States</h4>";
-      };
-
-      info.addTo(map);
-
-      var legend = L.control({ position: "bottomright" });
-
-      legend.onAdd = function (map) {
-        var div = L.DomUtil.create("div", "info legend"),
-          grades = [1];
-        for (var i = 0; i < grades.length; i++) {
-          div.innerHTML +=
-            '<i style="background:' +
-            getColor(grades[i]) +
-            '"></i> ' +
-            getLabel(grades[i]) +
-            "<br>";
-        }
-        return div;
-      };
-
-      legend.addTo(map);
-    </script>
+  </div>
+</div>
 
 {% endblock %}
