--- a/templates/map.html
+++ b/templates/map.html
@@ -16,7 +16,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link
       rel="stylesheet"
@@ -47,11 +46,12 @@
       crossorigin=""
     ></script>
     <script src="{{url_for('static',filename='us-states.js')}}"></script>
+
+    <title>{{ title }}</title>
   </head>
 
   <body>
     {% include 'navbar.html' %} {% block content %}{% endblock %}
-    <h1 class="map-title">So far, I have visited: </h1>
   </body>
   <div class="card-container">
     <div class="mt-4" id="map"></div>
